--- a/style.css
+++ b/style.css
@@ -924,14 +924,117 @@ object {
 
 .site-header .main-navigation{
 	width: 60%;
-	display: flex;
-	vertical-align: middle;
-	align-items: center;
-	justify-content: flex-end;
+	display: inline-block;
 	text-align: right;
 	font-weight: 400;
 }
 
+.site-header .main-navigation ul{
+	display: inline-block !important;
+}
+
+.site-header .main-navigation li{
+	display: inline-block;
+}
+
+nav {
+  min-width: 280px;
+  position: relative;
+  white-space: nowrap;
+  max-width: 950px; }
+  nav ul {
+    display: inline-block;
+    list-style-type: none;
+    padding: 0;
+    margin: 0; }
+  nav li {
+    display: inline-block; }
+    nav li:first-child a {
+      padding-left: 0; }
+  nav a {
+    display: inline-block;}
+  nav .knob {
+    cursor: ew-resize;
+    position: absolute;
+    right: 0;
+    top: 20%;
+    -webkit-transform: translateY(-50%) translateX(50%);
+        -ms-transform: translateY(-50%) translateX(50%);
+            transform: translateY(-50%) translateX(50%); }
+    @media (max-width: 1000px) {
+      nav .knob {
+        display: none; } }
+
+.nav__dropdown {
+  padding: 10px;
+  white-space: nowrap;
+  top: 40px;
+  right: -20px;
+  background-color: #e2e2e2;
+  transition: 300ms cubic-bezier(0.25, 2, 0.25, 1);
+  -webkit-transform-origin: center top;
+      -ms-transform-origin: center top;
+          transform-origin: center top;
+  -webkit-transform: rotateX(-30deg);
+          transform: rotateX(-30deg);
+  opacity: 0; }
+  .nav__dropdown.show {
+    -webkit-transform: rotateX(0deg);
+            transform: rotateX(0deg);
+    opacity: 1;
+    visibility: visible;
+		text-align: center;
+   }
+  @media (max-width: 650px) {
+    /*.nav__dropdown {
+      right: auto;
+      left: 0; }
+      .nav__dropdown:after {
+        right: auto;
+        left: 3rem; } */
+			}
+  .nav__dropdown:after {
+    content: '';
+    display: block;
+    position: absolute;
+    height: 0;
+    width: 0;
+    border-bottom: 10px solid #e2e2e2;
+    border-left: 10px solid transparent;
+    border-right: 10px solid transparent;
+    content: '';
+    top: -10px;
+    right: 15px; }
+  .nav__dropdown-wrapper {
+    display: inline-block;
+    -webkit-perspective: 500px;
+            perspective: 500px; }
+    @media (max-width: 650px) {
+      .nav__dropdown-wrapper {
+        position: static !important; } }
+  .nav__dropdown-toggle {
+    outline: none;
+    display: inline-block;
+    border: none;
+		top:-8px;
+		background: #e2e2e2;
+    background: none;
+    text-decoration: underline;
+    color: #fff;
+    background-image: url("./asset/image/arrow-down.svg");
+    background-repeat: no-repeat;
+    background-position: 100% center;
+	}
+  .nav__dropdown li {
+		text-align: left !important;
+	}
+  .nav__dropdown li:first-child a {
+     }
+  .nav__dropdown a {
+    padding: 10px 12px;
+   }
+
+/*
 @media (max-width: 700px) {
 	.site-header #wrapper{
 		display: block;
@@ -964,13 +1067,12 @@ object {
 
 	.site-header .main-navigation .menu ul{
 		display: inline-block !important;
-		justify-content: center !important;
 		text-align: center !important;
 		margin: 0;
 	}
 
 	.site-header .main-navigation li{
-		display: block;
+		display: inline-block;
 		background: #e2e2e2;
 		padding:6px 16px 5px 16px;
 		border-radius: 90px;
@@ -980,7 +1082,7 @@ object {
 	}
 
 
-}
+}*/
 
 /*--------------------------------------------------------------
 # Homepage
